news show in html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-nav">
+        <div class="container-fluid">
+          <img width="200px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/News24_%28website%29_logo.svg/2560px-News24_%28website%29_logo.svg.png" alt="">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+
+              <!-- <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+            </div>
+          </div>
+        </div>
+      </nav>
 
     <div class="container">
         <div id="newsCard" class="row row-cols-1 row-cols-md-2 g-4">
@@ -34,7 +51,7 @@
             </div> -->
 
 
-
+<!-- <img src="./360_F_581847176_eF540XqFGHDdGPZxyh5NtWHNzgs0XFk6.jpg" alt=""> -->
 
 
 <!-- 
